--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <!--slider end-->
 <div class="wrapper esse">
     <div class="title"><h2>Чому обирають Midgard?</h2></div>
-    <div class="esse_blocks zoomIn wow ">
+    <div class="esse_blocks">
         <div class="esse_blocks_block block1">
-            <img class="zoom" src='./img/esse1.png'/>
+            <img src='./img/esse1.png'/>
             <div class="block_description">
             <h3>Навчання<br> з 1-го до 11-го класу</h3>
             <span>Ліцензія МОН України</span>
@@ -86,14 +86,14 @@
         </div>
 
         <div class="esse_blocks_block block1" >
-            <img class="zoom" src='./img/esse2.png'/>
+            <img src='./img/esse2.png'/>
             <div class="block_description">
             <h3>Програма раннього розвитку з 4 років</h3>
             </div>
         </div>
 
         <div class="esse_blocks_block block1">
-            <img class="zoom" src='./img/esse3.png'/>
+            <img  src='./img/esse3.png'/>
             <div class="block_description">
             <h3>Навчальний день триває з 9.30 до 18.00</h3>
             <span>З можливістю перебування дитини в школі - з 7.30 до 21.30</span>
@@ -101,35 +101,35 @@
         </div>
 
         <div class="esse_blocks_block block1">
-            <img class="zoom"  src='./img/esse4.png'/>
+            <img  src='./img/esse4.png'/>
             <div class="block_description">
             <h3>Messenger <span>"Smart bot"</span> для онлайн контакту з батьками</h3>
             </div>
         </div>
 
         <div class="esse_blocks_block_second ">
-            <img class="zoom" src='./img/esse5.png'/>
+            <img src='./img/esse5.png'/>
             <div class="block_description">
            <h3>Комфортний<br/> простір, команди <br/>до 16 учнів</h3>
             </div>
         </div>
 
         <div class="esse_blocks_block_second ">
-            <img class="zoom" src='./img/esse6.png'/>
+            <img  src='./img/esse6.png'/>
             <div class="block_description">
             <h3>Психологічна <br/>підтримка персональної <br/>траєкторії</h3>
             </div>
         </div>
 
         <div class="esse_blocks_block_second ">
-            <img class="zoom" src='./img/esse7.png'/>
+            <img src='./img/esse7.png'/>
             <div class="block_description">
             <h3>Кейси та проекти, розвиток навичок і компетенції</h3>
             </div>
         </div>
 
         <div class="esse_blocks_block_second ">
-            <img class="zoom" src='./img/esse8.png'/>
+            <img  src='./img/esse8.png'/>
             <div class="block_description">
             <h3>Комунікація, взаємини та<br/> дружба</h3>
             </div>
@@ -267,8 +267,8 @@
 
 <div class="strategy">
     <div class="wrapper strategy_wrapper">
-          <div class="title bounceInLeft wow"><h2>Стратегія Midgard</h2></div>
-        <div class="strategy_first flex_strategy fadeInLeft wow ">
+          <div class="title"><h2>Стратегія Midgard</h2></div>
+        <div class="strategy_first flex_strategy">
             <img src="./img/strategy1.png">
             <div class="stategy_text left">
                 <p>
@@ -279,7 +279,7 @@
             </div>
         </div>
 
-        <div class="strategy_second flex_strategy fadeInRight wow ">
+        <div class="strategy_second flex_strategy">
             <div class="stategy_text stategy_text_second right">
                 <p>
                  У Midgard вчать не предмети, а дітей.
@@ -289,7 +289,7 @@
             <img src="./img/strategy2.png" >
         </div>
 
-        <div class="strategy_third flex_strategy fadeInLeft wow " >
+        <div class="strategy_third flex_strategy " >
             <img src="./img/strategy3.png" >
             <div class="stategy_text stategy_text_third left">
                 <p>
@@ -298,7 +298,7 @@
                 </p>
             </div>
         </div>
-        <div class="strategy_fourth flex_strategy  fadeInRight wow ">
+        <div class="strategy_fourth flex_strategy  ">
             <div class="stategy_text stategy_text_fourth right">
                 <p>
                  Індивідуальний підхід і система психологічного супроводу
@@ -318,8 +318,8 @@
 
 <div class="value">
     <div class="wrapper ">
-        <div class="title bounceInLeft wow"><h2>Цінності школи</h2></div>
-        <div class="value_boxes zoomIn wow " >
+        <div class="title "><h2>Цінності школи</h2></div>
+        <div class="value_boxes " >
             <div class="value_box ">
                 <img src="./img/value1.png"/>
                 <div class="block_description">
@@ -376,12 +376,12 @@
 ------------------------------
 -------------------------------->
 
-<div class="last_banner"><p class="wrapper bounceInLeft wow">"Ми вчимо створювати сенси та нові світи, а все інше зроблять роботи"</p></div>
+<div class="last_banner"><p class="wrapper">"Ми вчимо створювати сенси та нові світи, а все інше зроблять роботи"</p></div>
 <!-----------------------------
 ------------------------------
 -------------------------------->
-<div class="our_comand rotateInDownLeft wow ">
-    <div class="title bounceInLeft wow"><h2>Наша команда</h2></div>
+<div class="our_comand  ">
+    <div class="title "><h2>Наша команда</h2></div>
     <div class="wrapper_slide">
         <div class="your-class">
         <div>
@@ -437,7 +437,7 @@
 -------------------------------->
 
 <div class="contact">
-    <div class="title bounceInLeft wow"><h2>Контакти</h2></div>
+    <div class="title "><h2>Контакти</h2></div>
 </div>
 <div class="preferenses_blocks">
  <div class="preferenses">
